EXTRA_DIST = \
base.py \
conf.py \
01-basic.py \
02-MissingProtocol.py \
03-UnknownMethod.py \
04-UnknownMethod+MissingProtocol.py \
05-Unknown-Protocol.py \
06-Wrong-Protocol.py \
07-Missing-Host.py \
08-Broken-Request.py \
09-DotDot.py \
10-Dot.py \
11-HeaderEntryTwice.py \
12-Broken-Key.py \
13-Broken-Key2.py \
14-Broken-Key3.py \
15-CGI-simple.py \
16-CGI-pathinfo.py \
17-CGI-pathinfo2.py \
18-CGI-pathinfo3.py \
19-HeadMethod.py \
20-VirtualHost.py \
21-VirtualHost2.py \
22-NoHost.py \
23-Host.py \
24-Host+Port.py \
25-Host-Broken.py \
26-Host-Broken-Dot.py \
27-Missing-File.py \
28-Missing-File+Param.py \
29-Post+Without-lenght.py \
30-Post+urlencoded.py \
31-Post+urlencoded2.py \
32-DirIndex+Redir.py \
33-DirIndex.py \
34-DirIndex2.py \
35-PHP-simple.py \
36-PHP-simple2.py \
37-PHP-post.py \
38-PHP-get.py \
39-Auth-Basic.py \
40-Auth-Basic2.py \
41-Auth-Basic3.py \
42-Pipelining.py \
43-Pipelining2.py


test:
	./run-tests.py
